[gd_scene load_steps=8 format=3 uid="uid://dayaexudqbu18"]

[ext_resource type="Script" path="res://classes/player_entity.gd" id="1_0aqc2"]
[ext_resource type="PackedScene" uid="uid://4jln7hmp0y8w" path="res://classes/character_entity.tscn" id="2_fm6d2"]
[ext_resource type="PackedScene" uid="uid://cypgeb5ffy0ka" path="res://classes/character_attributes.tscn" id="4_kr6nq"]
[ext_resource type="Texture2D" uid="uid://b75wps2k2krwy" path="res://icon.png" id="5_opqh5"]
[ext_resource type="Script" path="res://classes/ControllerHandler.gd" id="6_pa4hr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s38j7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hbv7d"]

[node name="PlayerEntity" type="Node2D"]
script = ExtResource("1_0aqc2")

[node name="CharacterEntity" parent="." instance=ExtResource("2_fm6d2")]

[node name="CharacterAttributes" parent="." instance=ExtResource("4_kr6nq")]
character_type = 0
area_shape = SubResource("CircleShape2D_s38j7")
speed = 200.0
texture = ExtResource("5_opqh5")
shape = SubResource("CapsuleShape2D_hbv7d")

[node name="ControllerHandler" type="Node" parent="."]
script = ExtResource("6_pa4hr")
